@@ -6,7 +6,7 @@
 
 	<groupId>org.flexiblepower.defpi</groupId>
 	<artifactId>service-parent</artifactId>
-	<version>18.6.2-SNAPSHOT</version>
+	<version>19.10.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>dEF-Pi service parent POM</name>
@@ -65,7 +65,7 @@
 		<java.target>1.8</java.target>
 		<license.licenseName>apache_v2</license.licenseName>
 
-		<defpi.version>18.6.2-SNAPSHOT</defpi.version>
+		<defpi.version>19.10.1-SNAPSHOT</defpi.version>
 
 		<defpi.sources.generated>${project.build.directory}/generated-sources/java</defpi.sources.generated>
 		<defpi.resources.generated>${project.build.directory}/generated-resources/defpi</defpi.resources.generated>
@@ -83,7 +83,7 @@
 	</properties>
 
 	<prerequisites>
-		<maven>3.0</maven>
+		<maven>3.0.5</maven>
 	</prerequisites>
 
 	<!-- Where to push the service parent itself, should not be used by children -->
@@ -95,29 +95,15 @@
 		</snapshotRepository>
 	</distributionManagement>
 
-	<!-- Where to find dependencies -->
-	<repositories>
-		<repository>
-			<id>sonatype-snapshot</id>
-			<name>Sonatype snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
-	<!-- Where to find plugins -->
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-snapshot</id>
-			<name>Sonatype snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.flexiblepower.defpi</groupId>
+				<artifactId>raml-service</artifactId>
+				<version>${defpi.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<!-- Use the defpi-service library to communicate with orchestrator -->
@@ -125,6 +111,12 @@
 			<groupId>org.flexiblepower.defpi</groupId>
 			<artifactId>service</artifactId>
 			<version>${defpi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
 
@@ -144,7 +136,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
+					<version>3.0.0-M2</version>
 					<configuration>
 						<systemProperties>
 							<property>
@@ -171,19 +163,19 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.8.2</version>
+					<version>3.0.0-M1</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>2.5.2</version>
+					<version>3.0.0-M1</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.1.1</version>
 				</plugin>
 
 				<plugin>
@@ -196,6 +188,13 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>3.0.1</version>
+					<configuration>
+						<additionalOptions>
+							<additionalOption>--add-modules java.xml.bind</additionalOption>
+							<additionalOption>--add-modules java.xml.ws.annotation</additionalOption>
+							<!-- additionalOptions>-html5</additionalOptions -->
+						</additionalOptions>
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -217,7 +216,7 @@
 					<missing>.noservice</missing>
 				</file>
 			</activation>
-			
+
 			<build>
 				<plugins>
 					<!-- Use the def-pi plugin to generate stubs -->
@@ -252,26 +251,6 @@
 									<sources>
 										<source>${defpi.sources.generated}</source>
 									</sources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Create javadoc, but not for generated code -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<sourceFileExcludes>
-										<sourceFileExclude>${defpi.resources.generated}</sourceFileExclude>
-									</sourceFileExcludes>
-									<quiet>true</quiet>
 								</configuration>
 							</execution>
 						</executions>
@@ -324,24 +303,10 @@
 						</configuration>
 					</plugin>
 
-					<!--Attach sources when packaging -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
 					<!-- The assembly plugin puts all java code in one jar -->
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>3.1.0</version>
+						<version>3.1.1</version>
 						<configuration>
 							<archive>
 								<manifest>
@@ -368,7 +333,21 @@
 					<plugin>
 						<groupId>com.spotify</groupId>
 						<artifactId>docker-maven-plugin</artifactId>
-						<version>1.1.1</version>
+						<version>1.2.0</version>
+
+						<dependencies>
+							<dependency>
+								<groupId>javax.activation</groupId>
+								<artifactId>activation</artifactId>
+								<version>1.1.1</version>
+							</dependency>
+						</dependencies>
+
+						<configuration>
+							<registryUrl>${docker.registry}</registryUrl>
+							<serverId>defpi-registry</serverId>
+						</configuration>
+
 						<executions>
 							<execution>
 								<!-- Build x86_64 image -->
